tests/jastadd/negative/type_errors/L1/4_TypeCheckingPlusOp.ob
MODULE TestModule;
	VAR i : INTEGER;
BEGIN
	i := (1<2) + 3
END TestModule.
